--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,5 +1,9 @@
+@import url("https://fonts.googleapis.com/css2?family=Lobster&family=Raleway&display=swap");
+
 .block1 {
-  color: black;
+  font-family: "Raleway", sans-serif;
+  width: 90%;
+  margin: auto;
 
   &__list {
     list-style: none;
@@ -12,7 +16,7 @@
   }
   &__item-task {
     width: 19%;
-    margin-bottom: 1px;
+    margin-bottom: 2px;
   }
   &__title {
     text-align: center;
@@ -22,12 +26,56 @@
 button {
   appearance: none;
   cursor: pointer;
-  width: 250px;
-  height: 110px;
+  width: 100%;
+  height: 100%;
+  border: 2px solid black;
+  border-radius: 10px;
+  font-family: "Raleway", sans-serif;
+  font-size: 16px;
   &:hover {
     background-color: white;
   }
 }
 body {
-  background-color: bisque;
+  background-image: url("./2136752.jpg");
+  background-size: cover;
+  color: whitesmoke;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+.header {
+  display: flex;
+  width: 90%;
+  margin: auto;
+  justify-content: space-between;
+  height: 7%;
+  align-items: center;
+  margin-bottom: 40px;
+  &__logo {
+    font-family: "Lobster", cursive;
+    color: lightgray;
+    &:hover {
+      color: white;
+    }
+  }
+  &__logo-wrapper {
+    width: 1%;
+    font-size: 20px;
+  }
+  &__nav-link {
+    margin-right: 20px;
+    font-family: "Raleway", sans-serif;
+    color: lightgrey;
+    font-weight: 700;
+    &:last-child {
+      margin-right: 0;
+    }
+    &:hover {
+      color: white;
+    }
+  }
 }
