:construction: 2 homework is finished

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -4,7 +4,6 @@
   font-family: "Raleway", sans-serif;
   width: 90%;
   margin: auto;
-
   &__list {
     list-style: none;
     display: flex;
@@ -20,6 +19,7 @@
   }
   &__title {
     text-align: center;
+    font-size: 34px;
   }
 }
 
