--- a/styles/style.scss
+++ b/styles/style.scss
@@ -16,6 +16,10 @@
   &__item-task {
     width: 19%;
     margin-bottom: 2px;
+    padding: 2px;
+    &--wide {
+      width: 32%;
+    }
   }
   &__title {
     text-align: center;
@@ -31,7 +35,8 @@ button {
   border: 2px solid black;
   border-radius: 10px;
   font-family: "Raleway", sans-serif;
-  font-size: 16px;
+  font-size: 17px;
+
   &:hover {
     background-color: white;
   }
