--- a/styles/style.scss
+++ b/styles/style.scss
@@ -18,7 +18,7 @@
     margin-bottom: 2px;
     padding: 2px;
     &--wide {
-      width: 32%;
+      width: 32.5%;
     }
   }
   &__title {
@@ -29,6 +29,7 @@
 
 button {
   appearance: none;
+  outline: none;
   cursor: pointer;
   width: 100%;
   height: 100%;
